nullaway_error_C32A8A3D-AC82-441C-BED7-B560639166BA.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/cors/CorsConfiguration.java:186: error: [NullAway] dereferenced expression this.allowedOrigins is @Nullable
			this.allowedOrigins.add(value);
			                   ^
    (see http://t.uber.com/nullaway )
